[package]
name = "lzf-sys"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2018"
build = "build.rs"
links = "lzf"
repository = "https://github.com/mulimoen/lzf-sys"
documentation = "https://docs.rs/lzf-sys"
description = "FFI bindings for lzf"
keywords = ["compression", "lzf"]
categories = ["compression", "external-ffi-bindings"]
license = "MIT AND BSD-2-Clause"
readme = "README.md"

[dependencies]

[build-dependencies]
cc = { version = "1.0.66", optional = true }
bindgen = { version = "0.56.0", optional = true }

[features]
static = ["cc"]
paranoid = ["bindgen"]
default = ["static"]
