[package]
name = "lzf-sys"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>", "Kexing Chen <ckxkexing@qq.com>"]
edition = "2021"
build = "build.rs"
links = "lzf"
repository = "https://github.com/mulimoen/lzf-sys"
documentation = "https://docs.rs/lzf-sys"
description = "FFI bindings for lzf"
keywords = ["compression", "lzf"]
categories = ["compression", "external-ffi-bindings"]
license = "MIT AND BSD-2-Clause"
readme = "README.md"

[dependencies]
libc = "0.2.138"

[build-dependencies]
cc = { version = "1.0.66", optional = true }
bindgen = { version = "0.63.0", optional = true }

[features]
static = ["cc"]
paranoid = ["bindgen"]
default = ["static"]
